--- a/lab_ca_r1_notebook.ipynb
+++ b/lab_ca_r1_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 26,
    "id": "c4ebcde7",
    "metadata": {},
    "outputs": [],
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 27,
    "id": "2303eef7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(\"csv_files/file1.csv\")\n",
-    "data2 = pd.read_csv(\"csv_files/file2.csv\")\n",
-    "data3 = pd.read_csv(\"csv_files/file3.csv\")"
+    "data1 = pd.read_csv(\"files_for_lab/csv_files/file1.csv\")\n",
+    "data2 = pd.read_csv(\"files_for_lab/csv_files/file2.csv\")\n",
+    "data3 = pd.read_csv(\"files_for_lab/csv_files/file3.csv\")"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 28,
    "id": "6217a222",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 29,
    "id": "138da368",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "[7070 rows x 11 columns]"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 30,
    "id": "652e0ad5",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 31,
    "id": "f657389f",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 32,
    "id": "4618f238",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 33,
    "id": "72096a29",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 34,
    "id": "50838af9",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
        "[12074 rows x 9 columns]"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,36 +1005,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 35,
    "id": "1d8cd8d5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\grwc9\\AppData\\Local\\Temp\\ipykernel_3244\\2199282485.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  data['customer_lifetime_value'] = data['customer_lifetime_value'].str.replace(r'[^0-9]+', '')\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer</th>\n",
+       "      <th>st</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>customer_lifetime_value</th>\n",
+       "      <th>income</th>\n",
+       "      <th>monthly_premium_auto</th>\n",
+       "      <th>policy_type</th>\n",
+       "      <th>vehicle_class</th>\n",
+       "      <th>total_claim_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RB50392</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>2.704934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>QZ44356</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6979.535900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>1131.464935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AI49188</td>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12887.431700</td>\n",
+       "      <td>48767.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Two-Door Car</td>\n",
+       "      <td>566.472247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WW63253</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>7645.861800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>SUV</td>\n",
+       "      <td>529.881344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GA49547</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5363.076500</td>\n",
+       "      <td>36357.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>17.269323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7065</th>\n",
+       "      <td>LA72316</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>234.059880</td>\n",
+       "      <td>71941.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>198.234764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7066</th>\n",
+       "      <td>PK87824</td>\n",
+       "      <td>California</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30.965112</td>\n",
+       "      <td>21604.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>379.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7067</th>\n",
+       "      <td>TD14365</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>81.638904</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>790.784983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7068</th>\n",
+       "      <td>UP19263</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>75.244424</td>\n",
+       "      <td>21941.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "      <td>691.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7069</th>\n",
+       "      <td>Y167826</td>\n",
+       "      <td>California</td>\n",
+       "      <td>M</td>\n",
+       "      <td>26.118369</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>Corporate Auto</td>\n",
+       "      <td>Two-Door Car</td>\n",
+       "      <td>369.600000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12074 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0       0.000000e+00\n",
-       "1       6.979536e+09\n",
-       "2       1.288743e+10\n",
-       "3       7.645862e+09\n",
-       "4       5.363076e+09\n",
-       "            ...     \n",
-       "7065    0.000000e+00\n",
-       "7066    0.000000e+00\n",
-       "7067    0.000000e+00\n",
-       "7068    0.000000e+00\n",
-       "7069    0.000000e+00\n",
-       "Name: customer_lifetime_value, Length: 12074, dtype: float64"
+       "     customer          st gender  customer_lifetime_value   income  \\\n",
+       "0     RB50392  Washington    NaN                 0.000000      0.0   \n",
+       "1     QZ44356     Arizona      F              6979.535900      0.0   \n",
+       "2     AI49188      Nevada      F             12887.431700  48767.0   \n",
+       "3     WW63253  California      M              7645.861800      0.0   \n",
+       "4     GA49547  Washington      M              5363.076500  36357.0   \n",
+       "...       ...         ...    ...                      ...      ...   \n",
+       "7065  LA72316  California      M               234.059880  71941.0   \n",
+       "7066  PK87824  California      F                30.965112  21604.0   \n",
+       "7067  TD14365  California      M                81.638904      0.0   \n",
+       "7068  UP19263  California      M                75.244424  21941.0   \n",
+       "7069  Y167826  California      M                26.118369      0.0   \n",
+       "\n",
+       "      monthly_premium_auto     policy_type  vehicle_class  total_claim_amount  \n",
+       "0                   1000.0   Personal Auto  Four-Door Car            2.704934  \n",
+       "1                     94.0   Personal Auto  Four-Door Car         1131.464935  \n",
+       "2                    108.0   Personal Auto   Two-Door Car          566.472247  \n",
+       "3                    106.0  Corporate Auto            SUV          529.881344  \n",
+       "4                     68.0   Personal Auto  Four-Door Car           17.269323  \n",
+       "...                    ...             ...            ...                 ...  \n",
+       "7065                  73.0   Personal Auto  Four-Door Car          198.234764  \n",
+       "7066                  79.0  Corporate Auto  Four-Door Car          379.200000  \n",
+       "7067                  85.0  Corporate Auto  Four-Door Car          790.784983  \n",
+       "7068                  96.0   Personal Auto  Four-Door Car          691.200000  \n",
+       "7069                  77.0  Corporate Auto   Two-Door Car          369.600000  \n",
+       "\n",
+       "[12074 rows x 9 columns]"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,16 +1219,16 @@
    "source": [
     "#Correct the values in the column customer lifetime value.\n",
     "\n",
-    "data['customer_lifetime_value'] = data['customer_lifetime_value'].str.replace(r'[^0-9]+', '')\n",
+    "data['customer_lifetime_value'] = data['customer_lifetime_value'].astype(str).str.replace(\"%\", '')\n",
     "data['customer_lifetime_value'] = data['customer_lifetime_value'].astype(float)\n",
     "data['customer_lifetime_value'] = data['customer_lifetime_value'].fillna(0)\n",
-    "data['customer_lifetime_value'] = data['customer_lifetime_value'] * 100\n",
+    "data['customer_lifetime_value'] = data['customer_lifetime_value'] / 100\n",
     "data['customer_lifetime_value']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "3fca04be",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 37,
    "id": "0daaedf1",
    "metadata": {},
    "outputs": [
@@ -1070,8 +1247,8 @@
      "output_type": "stream",
      "text": [
       "(12074, 9)\n",
-      "(2943, 9)\n",
-      "(9131, 9)\n"
+      "(2939, 9)\n",
+      "(9135, 9)\n"
      ]
     }
    ],
@@ -1087,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 38,
    "id": "4beb89a2",
    "metadata": {},
    "outputs": [
@@ -1095,8 +1272,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9131, 9)\n",
-      "(6837, 9)\n"
+      "(9135, 9)\n",
+      "(6840, 9)\n"
      ]
     }
    ],
